# cc-game

./: .gitignore  CMakeLists.txt  main.cpp  mingw-w64.cmake
cmake/: BundleWindows.cmake
map-converter/: main.cpp
src/: resources.rc
src/Game/: AudioBuffer.h  AudioManager.cpp  AudioManager.h  AudioSettings.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  PathUtf8.h  Profile.cpp  Profile.h  ResourceManager.cpp  ResourceManager.h  SettingsStorage.cpp  SettingsStorage.h  Sound.cpp  Sound.h  VideoSettings.h
src/Game/Events/: Interfaces.h
src/Game/Gameplay/: ChartData.h  ChartLoader.cpp  ChartLoader.h  GameplayConstants.h  GameplayMath.h  GameplaySettings.h  HitScoring.h  Judgement.h  JudgementDisplayColors.h  LaneInputHandler.cpp  LaneInputHandler.h  LaneRemap.h  NoteSimulation.cpp  NoteSimulation.h  ResultsGraphDeltaBarWidth.h  ResultsGraphDisplay.cpp  ResultsGraphDisplay.h  RhythmField.cpp  RhythmField.h  SongClock.cpp  SongClock.h  TimingRuler.cpp  TimingRuler.h  TimingRulerMath.h
src/Game/Layout/: ILayoutHelper.h  VBoxLayout.cpp  VBoxLayout.h  ViewportMatchLayout.cpp  ViewportMatchLayout.h
src/Game/Scene/: IScene.h  SceneBase.h  SceneManager.cpp  SceneManager.h
src/Game/Scene/Scenes/: GameplayScene.cpp  GameplayScene.h  MainMenuScene.cpp  MainMenuScene.h  OptionsOverlayScene.cpp  OptionsOverlayScene.h  ResultsOverlayScene.cpp  ResultsOverlayScene.h  SongSelectScene.cpp  SongSelectScene.h
src/Game/Score/: ReplayStore.cpp  ReplayStore.h  ReplayTypes.h  ResultsViewData.h  ScoreStore.cpp  ScoreStore.h  ScoreTypes.h
src/Game/Song/: SongManager.cpp  SongManager.h  SongTypes.h
src/Game/objects/: Container.cpp  Container.h  Drawable.cpp  Drawable.h  GameObject.cpp  GameObject.h  InputField.cpp  InputField.h  Label.cpp  Label.h  PanelRect.cpp  PanelRect.h  ScrollContainer.cpp  ScrollContainer.h  SelectableRow.cpp  SelectableRow.h  Slider.cpp  Slider.h  Sprite.cpp  Sprite.h  TextButton.cpp  TextButton.h
tests/: ChartLoaderTests.cpp  GameplayMathTests.cpp  HitAccuracyTests.cpp  HitScoringTests.cpp  JudgementDisplayColorsTests.cpp  LaneInputHandlerTests.cpp  NoteSimulationTests.cpp  PathUtf8Tests.cpp  ResultsGraphDeltaBarWidthTests.cpp  SceneManagerTests.cpp  SliderTests.cpp  TimingRulerMathTests.cpp  VBoxLayoutTests.cpp
